# Lem-in

./: CMakeLists.txt  Makefile  README.md  afef  printti2  testmap2
includes/: lem_in.h
libftprintf/libft/: ft_strequ.c  ft_strlen.c
source/: ant_flow.c  calculate_moves.c  delete_dead_end.c  dfs_search.c  divide_ants_to_paths.c  find_a_room.c  free_memory.c  get_links.c  get_links_2.c  handle_paths.c  lem_in.c  parse.c  parse_two.c  parsing_helpers.c  print.c  reset_paths.c  room_sorting_utils.c  run_path_finding.c  run_second_and_third_round.c  save_path.c  sort_paths.c  sort_rooms.c  take_turns.c
valid_maps/: 3.108rooms.map  x.map
