cmake_minimum_required(VERSION 3.15)
project(lEMIN_OWN)

set(CMAKE_CXX_STANDARD 14)

include_directories(includes)
include_directories(libftprintf/includes)
include_directories(libftprintf/libft)

add_executable(lEMIN_OWN
        includes/lem_in.h
        libftprintf/includes/ft_printf.h
        libftprintf/includes/get_next_line.h
        libftprintf/libft/ft_atoi.c
        libftprintf/libft/ft_bzero.c
        libftprintf/libft/ft_isalnum.c
        libftprintf/libft/ft_isalpha.c
        libftprintf/libft/ft_isascii.c
        libftprintf/libft/ft_isdigit.c
        libftprintf/libft/ft_isprint.c
        libftprintf/libft/ft_itoa.c
        libftprintf/libft/ft_lstdelone.c
        libftprintf/libft/ft_lstnew.c
        libftprintf/libft/ft_memalloc.c
        libftprintf/libft/ft_memccpy.c
        libftprintf/libft/ft_memchr.c
        libftprintf/libft/ft_memcmp.c
        libftprintf/libft/ft_memcpy.c
        libftprintf/libft/ft_memdel.c
        libftprintf/libft/ft_memmove.c
        libftprintf/libft/ft_memset.c
        libftprintf/libft/ft_nbrcount.c
        libftprintf/libft/ft_putchar.c
        libftprintf/libft/ft_putchar_fd.c
        libftprintf/libft/ft_putendl.c
        libftprintf/libft/ft_putendl_fd.c
        libftprintf/libft/ft_putnbr.c
        libftprintf/libft/ft_putnbr_fd.c
        libftprintf/libft/ft_putstr.c
        libftprintf/libft/ft_putstr_fd.c
        libftprintf/libft/ft_strcat.c
        libftprintf/libft/ft_strchr.c
        libftprintf/libft/ft_strclr.c
        libftprintf/libft/ft_strcmp.c
        libftprintf/libft/ft_strcpy.c
        libftprintf/libft/ft_strdel.c
        libftprintf/libft/ft_strdup.c
        libftprintf/libft/ft_strequ.c
        libftprintf/libft/ft_striter.c
        libftprintf/libft/ft_striteri.c
        libftprintf/libft/ft_strjoin.c
        libftprintf/libft/ft_strlcat.c
        libftprintf/libft/ft_strlen.c
        libftprintf/libft/ft_strmap.c
        libftprintf/libft/ft_strmapi.c
        libftprintf/libft/ft_strncat.c
        libftprintf/libft/ft_strncmp.c
        libftprintf/libft/ft_strncpy.c
        libftprintf/libft/ft_strnequ.c
        libftprintf/libft/ft_strnew.c
        libftprintf/libft/ft_strnstr.c
        libftprintf/libft/ft_strrchr.c
        libftprintf/libft/ft_strsplit.c
        libftprintf/libft/ft_strstr.c
        libftprintf/libft/ft_strsub.c
        libftprintf/libft/ft_strtrim.c
        libftprintf/libft/ft_tolower.c
        libftprintf/libft/ft_toupper.c
        libftprintf/libft/libft.h
        libftprintf/srcs/ft_printf.c
        libftprintf/srcs/get_next_line.c
        libftprintf/srcs/imaxtoa.c
        libftprintf/srcs/minwth_print.c
        libftprintf/srcs/number_cast.c
        libftprintf/srcs/print_c.c
        libftprintf/srcs/print_d.c
        libftprintf/srcs/print_f.c
        libftprintf/srcs/print_o.c
        libftprintf/srcs/print_p.c
        libftprintf/srcs/print_percent.c
        libftprintf/srcs/print_s.c
        libftprintf/srcs/print_u.c
        libftprintf/srcs/print_x.c
        libftprintf/srcs/put_zeros.c
        libftprintf/srcs/scan_tags.c
        libftprintf/srcs/set_tags_and_print.c
        source/ant_flow.c
        source/error_management.c
        source/find_a_room.c
        source/get_links.c
        source/get_links_2.c
        source/handle_paths.c
        source/lem_in.c
        source/parse_two.c
        source/reset_paths.c
        source/save_path.c
        source/sort_rooms.c
        valid_maps/0.start-end.map
        valid_maps/1.most-simple.map
        valid_maps/2.6rooms.map
        valid_maps/3.108rooms.map
        valid_maps/4.medium.map
        valid_maps/a.map
        valid_maps/bigmap)
